--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 </head>
@@ -15,7 +16,7 @@
     <!--Navigations bar-->
     <header>
         <nav class="nav">
-            <img src="images/logowhite.png" width="9%" id="logo">
+            <img src="images/logowhite.png" width="9%" id="logo"/>
             <ul>
                 <li><a class="active" href="index.html">Forside</a></li>
                 <li><a href="om.html">Om Salonen</a></li>
@@ -35,19 +36,19 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="/images/slide1.jpg" style="width:100%">
+            <img src="/images/slide1.jpg" style="width:100%"/>
             <div class="text">Sanne's Klip</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="/images/slide2.jpg" style="width:100%">
+            <img src="/images/slide2.jpg" style="width:100%"/>
             <div class="text">Sanne's Klip</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="/images/slide3.jpg" style="width:100%">
+            <img src="/images/slide3.jpg" style="width:100%"/>
             <div class="text">Sanne's Klip</div>
         </div>
 
